interaction : add scroll to snap and change widths from 100vw to 100% to avoid hor scroll overflow

--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,5 +1,5 @@
 footer {
-  width: 100vw;
+  width: 100%;
   height: 90px;
   display: grid;
   justify-content: center;
