--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,5 +1,5 @@
 #header-background {
-  width: 100vw;
+  width: 100%;
   height: 70px;
   margin: 0 auto;
   position: fixed;
