--- a/CSS/sections.css
+++ b/CSS/sections.css
@@ -2,12 +2,14 @@
 
 #about , #research , #contact {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr repeat(3,minmax(33%,450px)) 1fr;
   grid-template-rows: 1fr repeat(3,33%) 1fr;
   align-items: center;
   justify-items: center;
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
 }
 
 #title-about {
